umq/static/css/index.css
.container.body {
    padding-top: 15px;
    padding-bottom: 50px;
}
body {
    background-color: whitesmoke;
}
.navbar {
    height: 50px;
    background-color: whitesmoke;
    border-color: whitesmoke;
}
.add-url-input {
    margin: 1%;
}
.embed-responsive {
    position: initial;
    height: 100%;
}

audio {
    width: 100%;
    height: 40px;
    border: solid 4px lightsteelblue;
}

.input-group {
    margin-bottom: 15px;
}

.hidden {
    display: none;
}

#playlist, .table {
    table-layout: fixed;
}

#playlist tr:hover {
    cursor: pointer;
    background-color: lightsteelblue;
}
#playlist td {
    overflow: hidden;
    white-space: nowrap;
    cursor: pointer;
}
.row-delete { width: 20px; }
.row-track  { width: 15%; }
.row-source { width: 50%; }
.hideChild > * {
    display: none;
}

a.delete {
    -webkit-transition: color 0.2s false;
    -webkit-transition-delay: ease-in;
    -moz-transition: color 0.2s false ease-in;
    -o-transition: color 0.2s false ease-in;
    transition: color 0.15s ease-in;
    display: none;
    color: rgba(185, 3, 3, 0.63);
}
a.delete :hover {
    color: rgb(86, 2, 2);
}

#message {
    position: fixed;
    margin: 50px auto;
    z-index: 10;
}
#message .alert {
    -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.5);
    box-shadow: 0 5px 15px rgba(0,0,0,.5);
    max-height: 150px;
    overflow-wrap: break-word;
    overflow: overlay;
}
.alert-dismissible .close {
    color: black;
}
.close {
    opacity: 0.5;
}
.close:hover {
    opacity: 0.7;
}

#player {
    height: 10px;
}

#playlist tr:hover .delete {
    display: block;
}

.table-responsive {
    border: 0;
    margin-top: 40px;
}

.playing {
    background-color: rgba(153, 189, 107, 0.64);
}

.loading {
    background-color: grey;
}

